fix content width for panels, overflow for algolia search box

--- a/doc/source/_static/css/custom.css
+++ b/doc/source/_static/css/custom.css
@@ -1,5 +1,12 @@
-/* For Algolia*/
-/*#site-navigation { overflow: visible; }*/
+/* For Algolia search box to flow-over horizontally into main content*/
+#site-navigation { overflow-y: visible; }
+
+/* sphinx-panels overrides the content width to 1140 for large displays.*/
+@media (min-width: 1200px) {
+    .container, .container-lg, .container-md, .container-sm, .container-xl {
+        max-width: 1400px !important;
+    }
+}
 
 /*Extends the docstring signature box.*/
 .rst-content dl:not(.docutils) dt {
